--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,28 +1,42 @@
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #333;
+    padding: 80px 0px;
+    background-color: black;
     color: #fff;
     font-family: 'Arial Black', sans-serif;
     text-align: left;
 }
 
 header {
-    background-color: #ff00cc;
-    padding: 20px;
-    margin-bottom: 20px;
+    font-family: 'Brush Script MT', cursive;
+    text-align: center;
+    color: #ff00cc;
+    font-style: italic;
 }
 
 h1 {
-    margin: 0;
-    font-size: 36px;
+    font-size: 50px;
+    text-decoration: underline;
 }
 
 #description {
     text-align: center;
     max-width: 600px;
-    margin: 50px auto 100px;
+    margin: 50px auto;
     color: #ccc;
+}
+
+table {
+    margin: 0px auto;
+    max-width: 200px;
+}
+
+table td {
+    padding: 40px 20px;
+    vertical-align: top;
+}
+
+.category {
+    color: #ff00cc
 }
 
 #thermometer {
@@ -30,7 +44,7 @@ h1 {
     height: 400px;
     background-color: #1a1a1a;
     position: relative;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
 #fill {
@@ -69,3 +83,5 @@ h1 {
         font-size: 10px; /* Adjust font size for smaller screens */
     }
 }
+
+
